Bug 435201 - 'Enter' Key doesn't confirm crop.
Summary: 'Enter' Key doesn't confirm crop.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
: 435545 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-31 21:16 UTC by Ralek Kolemios
Modified: 2021-04-09 12:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralek Kolemios 2021-03-31 21:16:57 UTC
After selecting an area to crop, hitting the 'enter' key cancels the crop.
The only way to confirm a crop is to click the 'crop' button in the tool options docker.

Version: 4.4.4-alpha (git 14e244c)
Comment 1 tomtomtomreportingin 2021-03-31 21:34:12 UTC
This was known but wasn't on the bug tracker yet, Sharaf should already be looking into it.
Comment 2 Bug Janitor Service 2021-04-01 16:41:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/788
Comment 3 Dmitry Kazakov 2021-04-03 11:54:27 UTC
Git commit fd85858e08ad8ff3a45e25ec2e21c2af4f4db9aa by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 03/04/2021 at 11:02.
Pushed by dkazakov into branch 'master'.

Bugfix: Crop tool doesn't respond to some events

(This commit reverts 5ea95edb1f51acbac032055aee6333381efe95c8)

M  +5    -0    libs/flake/KoToolBase.cpp
M  +7    -0    libs/flake/KoToolBase.h
M  +7    -0    libs/flake/KoToolProxy.cpp
M  +3    -0    libs/flake/KoToolProxy.h
M  +5    -0    libs/image/kis_image.cc
M  +21   -0    libs/image/kis_image.h
M  +2    -0    libs/ui/KisDocument.cpp
M  +1    -0    libs/ui/canvas/kis_tool_proxy.cpp
M  +6    -1    plugins/tools/tool_crop/kis_tool_crop.cc
M  +1    -0    plugins/tools/tool_crop/kis_tool_crop.h

https://invent.kde.org/graphics/krita/commit/fd85858e08ad8ff3a45e25ec2e21c2af4f4db9aa
Comment 4 Halla Rempt 2021-04-09 11:27:38 UTC
*** Bug 435545 has been marked as a duplicate of this bug. ***
Comment 5 Halla Rempt 2021-04-09 12:10:10 UTC
Git commit 9180bae06073f846d886ba4573a4e37cd959b027 by Halla Rempt, on behalf of Sharaf Zaman.
Committed on 09/04/2021 at 11:27.
Pushed by rempt into branch 'krita/4.3'.

Bugfix: Crop tool doesn't respond to some events

(This commit reverts 5ea95edb1f51acbac032055aee6333381efe95c8)
(cherry picked from commit fd85858e08ad8ff3a45e25ec2e21c2af4f4db9aa)

M  +5    -0    libs/flake/KoToolBase.cpp
M  +7    -0    libs/flake/KoToolBase.h
M  +7    -0    libs/flake/KoToolProxy.cpp
M  +3    -0    libs/flake/KoToolProxy.h
M  +5    -0    libs/image/kis_image.cc
M  +21   -0    libs/image/kis_image.h
M  +2    -0    libs/ui/KisDocument.cpp
M  +1    -0    libs/ui/canvas/kis_tool_proxy.cpp
M  +6    -1    plugins/tools/tool_crop/kis_tool_crop.cc
M  +1    -0    plugins/tools/tool_crop/kis_tool_crop.h

https://invent.kde.org/graphics/krita/commit/9180bae06073f846d886ba4573a4e37cd959b027