Bugfix: Crop tool doesn't respond to some events

(This commit reverts 5ea95edb1f51acbac032055aee6333381efe95c8)

BUG:435201
(cherry picked from commit fd85858e08ad8ff3a45e25ec2e21c2af4f4db9aa)