libs/flake/KoToolBase.cpp
@@ -382,6 +382,11 @@ void KoToolBase::requestUndoDuringStroke()
     requestStrokeCancellation();
 }
 
+
+void KoToolBase::requestRedoDuringStroke()
+{
+}
+
 void KoToolBase::requestStrokeCancellation()
 {
 }
