libs/ui/canvas/kis_tool_proxy.cpp
@@ -21,6 +21,7 @@ KisToolProxy::KisToolProxy(KoCanvasBase *canvas, QObject *parent)
 void KisToolProxy::initializeImage(KisImageSP image)
 {
     connect(image, SIGNAL(sigUndoDuringStrokeRequested()), SLOT(requestUndoDuringStroke()), Qt::UniqueConnection);
+    connect(image, SIGNAL(sigRedoDuringStrokeRequested()), SLOT(requestRedoDuringStroke()), Qt::UniqueConnection);
     connect(image, SIGNAL(sigStrokeCancellationRequested()), SLOT(requestStrokeCancellation()), Qt::UniqueConnection);
     connect(image, SIGNAL(sigStrokeEndRequested()), SLOT(requestStrokeEnd()), Qt::UniqueConnection);
 }
