plugins/tools/tool_crop/kis_tool_crop.h
@@ -124,6 +124,7 @@ public Q_SLOTS:
 
     void requestStrokeEnd() override;
     void requestStrokeCancellation() override;
+    void requestRedoDuringStroke() override;
 
     void crop();
 
